--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<div class="h-screen w-full bg-[#FFDEE6]"></div>
 		</div>
 
-		<div class="" id="content">
+		<div class="overflow-x-hidden" id="content">
 			<div class="w-full h-full min-h-screen bg-[#FFDEE6] text-center">
 				<img
 					src="./assets/leleh.png"
@@ -105,21 +105,21 @@
 				/>
 				<div class="wrapper flex w-full overflow-scroll gap-4 mt-[3vw]  text-center" style="scroll-snap-type: x mandatory;">
 							
-					<div class="card box-border px-4 py-2 w-full flex-shrink-0 " style="scroll-snap-align: center;">
+					<div class="card box-border px-4 py-2 w-fit flex-shrink-0 " style="scroll-snap-align: center;">
 						<img
 							src="./assets/fot1.jpg"
 							alt=""
 							class="mx-auto w-[50vw] lg:w-[10vw] lg:h-[17vw] h-[80vw] object-cover rounded-xl"
 						/>
 					</div>
-					<div class="card box-border px-4 py-2 w-full flex-shrink-0" style="scroll-snap-align: center;">
+					<div class="card box-border px-4 py-2 w-fit flex-shrink-0" style="scroll-snap-align: center;">
 						<img
 							src="./assets/fot2.jpg"
 							alt=""
 							class="mx-auto w-[50vw] lg:w-[10vw] lg:h-[17vw] h-[80vw] object-cover rounded-xl"
 						/>
 					</div>
-					<div class="card box-border px-4 py-2 w-full flex-shrink-0" style="scroll-snap-align: center;">
+					<div class="card box-border px-4 py-2 w-fit flex-shrink-0" style="scroll-snap-align: center;">
 						<img
 							src="./assets/fot3.jpg"
 							alt=""
@@ -138,38 +138,41 @@
 				</p>
 				<img src="./assets/car.png" alt="" class="w-[40vw] lg:w-[20vw] animate-jalan" />
 
-				<div id="time" class="grid grid-cols-2 lg:grid-cols-4 gap-5 px-[10vw] mt-[10vw]">
-					<div class="">
-						<div class="p-[2vw] rounded-full bg-[#e17b7b]">
-							<p class="text-[10vw] lg:text-[3vw] font-slopes text-white text-center">2</p>
+				<div id="time" class="px-[10vw] mt-[10vw] relative">
+					<img src="./assets/mir.png" alt="" class="absolute z-10 ml-[-50vw]">
+					<div class="z-20 relative grid grid-cols-2 lg:grid-cols-4 gap-5 w-full ">
+						<div class="">
+							<div class="p-[2vw] rounded-full bg-[#e17b7b]">
+								<p class="text-[10vw] lg:text-[3vw] font-slopes text-white text-center">2</p>
+							</div>
+							<p class="font-slopes text-[10vw] lg:text-[3vw] text-[#f4396e] text-center">
+								Days
+							</p>
 						</div>
-						<p class="font-slopes text-[10vw] lg:text-[3vw] text-[#f4396e] text-center">
-							Days
-						</p>
-					</div>
-					<div class="">
-						<div class="p-[2vw] rounded-full bg-[#e17b7b]">
-							<p class="text-[10vw] lg:text-[3vw] font-slopes text-white text-center">12</p>
+						<div class="">
+							<div class="p-[2vw] rounded-full bg-[#e17b7b]">
+								<p class="text-[10vw] lg:text-[3vw] font-slopes text-white text-center">12</p>
+							</div>
+							<p class="font-slopes text-[10vw] lg:text-[3vw] text-[#f4396e] text-center">
+								Hour
+							</p>
 						</div>
-						<p class="font-slopes text-[10vw] lg:text-[3vw] text-[#f4396e] text-center">
-							Hour
-						</p>
-					</div>
-					<div class="">
-						<div class="p-[2vw] rounded-full bg-[#e17b7b]">
-							<p class="text-[10vw] lg:text-[3vw] font-slopes text-white text-center">12</p>
+						<div class="">
+							<div class="p-[2vw] rounded-full bg-[#e17b7b]">
+								<p class="text-[10vw] lg:text-[3vw] font-slopes text-white text-center">12</p>
+							</div>
+							<p class="font-slopes text-[10vw] lg:text-[3vw] text-[#f4396e] text-center">
+								Minutes
+							</p>
 						</div>
-						<p class="font-slopes text-[10vw] lg:text-[3vw] text-[#f4396e] text-center">
-							Minutes
-						</p>
-					</div>
-					<div class="">
-						<div class="p-[2vw] rounded-full bg-[#e17b7b]">
-							<p class="text-[10vw] lg:text-[3vw] font-slopes text-white text-center">12</p>
+						<div class="">
+							<div class="p-[2vw] rounded-full bg-[#e17b7b]">
+								<p class="text-[10vw] lg:text-[3vw] font-slopes text-white text-center">12</p>
+							</div>
+							<p class="font-slopes text-[10vw] lg:text-[3vw] text-[#f4396e] text-center">
+								Seconds
+							</p>
 						</div>
-						<p class="font-slopes text-[10vw] lg:text-[3vw] text-[#f4396e] text-center">
-							Seconds
-						</p>
 					</div>
 				</div>
 				<img
@@ -177,35 +180,38 @@
 					alt=""
 					class="w-[40vw] lg:w-[12vw] lg:my-[6vh] mt-[5vh] mx-auto animate-spin"
 				/>
-				<div class="mt-[5vh]">
-					<p class="font-slopes text-[12vw] lg:text-[3vw] text-[#f4396e] text-center">
-						Wednesday
-					</p>
-					<div class="flex justify-between items-center px-[10vw] lg:px-[40vw]">
+				<div class="mt-[5vh] overflow-x-hidden relative">
+					<img src="./assets/mir2.png" alt="" class="absolute z-10 ml-[80vw] mt-[75vw] w-[30vw]">
+					<div class="relative z-10">
 						<p class="font-slopes text-[12vw] lg:text-[3vw] text-[#f4396e] text-center">
-							Ocotober
+							Wednesday
 						</p>
-						<p class="font-lilita text-[15vw] lg:text-[5vw] text-[#f4396e] text-center">23</p>
+						<div class="flex justify-between items-center px-[10vw] lg:px-[40vw]">
+							<p class="font-slopes text-[12vw] lg:text-[3vw] text-[#f4396e] text-center">
+								Ocotober
+							</p>
+							<p class="font-lilita text-[15vw] lg:text-[5vw] text-[#f4396e] text-center">23</p>
+							<p class="font-slopes text-[12vw] lg:text-[3vw] text-[#f4396e] text-center">
+								2024
+							</p>
+						</div>
 						<p class="font-slopes text-[12vw] lg:text-[3vw] text-[#f4396e] text-center">
-							2024
+							16.00 WITA
 						</p>
+						<p class="font-slopes text-[12vw] lg:text-[3vw] text-[#f4396e] text-center">
+							Wendy’s Star Square
+						</p>
+						<p class="font-slopes text-[12vw] lg:text-[3vw] text-[#f4396e] text-center">
+							Bahu Mall
+						</p>
+						<a
+							href="https://maps.app.goo.gl/nhMvNmWYrdHJ17NG8"
+							target="_blank"
+							class="mt-[4vh] lg:mt-[10vh] font-slopes text-white bg-[#e17b7b] text-[10vw] lg:text-[3vw] rounded-3xl lg:px-[3vw] lg:py-[1vw] px-[6vw] py-[2vw]"
+						>
+							Lihat Lokasi
+						</a>
 					</div>
-					<p class="font-slopes text-[12vw] lg:text-[3vw] text-[#f4396e] text-center">
-						16.00 WITA
-					</p>
-					<p class="font-slopes text-[12vw] lg:text-[3vw] text-[#f4396e] text-center">
-						Wendy’s Star Square
-					</p>
-					<p class="font-slopes text-[12vw] lg:text-[3vw] text-[#f4396e] text-center">
-						Bahu Mall
-					</p>
-					<a
-						href="https://maps.app.goo.gl/nhMvNmWYrdHJ17NG8"
-						target="_blank"
-						class="mt-[4vh] lg:mt-[10vh] font-slopes text-white bg-[#e17b7b] text-[10vw] lg:text-[3vw] rounded-3xl lg:px-[3vw] lg:py-[1vw] px-[6vw] py-[2vw]"
-					>
-						Lihat Lokasi
-					</a>
 					
 				</div>
 
