ice cream minus

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<img src="./assets/car.png" alt="" class="w-[40vw] lg:w-[20vw] animate-jalan" />
 
 				<div id="time" class="px-[10vw] mt-[10vw] relative">
-					<img src="./assets/mir.png" alt="" class="absolute z-10 ml-[-50vw]">
+					<img src="./assets/mir.png" alt="" class="absolute z-10 ml-[-32vw] w-[40vw]">
 					<div class="z-20 relative grid grid-cols-2 lg:grid-cols-4 gap-5 w-full ">
 						<div class="">
 							<div class="p-[2vw] rounded-full bg-[#e17b7b]">
